customer code working, change to models
